--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MqttLogger
-version=0.1.0
+version=0.2
 author=Claus Denk <denk@us.es>
 maintainer=Claus Denk <denk@us.es>
 sentence=Provides a print() interface like Serial publishing on a mqtt broker.
-paragraph=This library is a substitute for Serial as a logging/debug tool when your device has an internet connection (ESP32 etc. and is not connected over the serial port. The text written by the print() commands is published to a given topic on a MQTT broker. By subscribing to the same topic you can display the log messages remotely. When no MWTT connection is available, Serial is used as a fallback.
+paragraph=This library is a substitute for Serial as a logging/debug tool when your device has an internet connection (ESP32 etc.) and is not connected over the serial port. The text written by the print() commands is published to a given topic on a MQTT broker. By subscribing to the same topic you can display the log messages remotely. When no MQTT connection is available, Serial is used as a fallback.
 category=Communication
 url=https://github.com/clausdenk/MqttLogger
 architectures=*
